# ArcFoundry

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  arc  pyproject.toml  release-please-config.json  rk-toolchain.env.example  run_all_rvm.sh  start-convert.sh
.github/workflows/: license-check.yml
ArcFoundry/: requirements.txt  start.sh
ArcFoundry/configs/: rv1126b_sherpa.yaml
ArcFoundry/core/: engine.py  main.py  preprocessor.py
configs/: rk3588_modnet.yaml  rk3588_sherpa.yaml  rk3588s_modnet.yaml  rk3588s_modnet_pureBN.yaml  rk3588s_modnet_pureBN_fp16_288x512.yaml  rk3588s_modnet_pureBN_int8.yaml  rk3588s_rvm.yaml  rk3588s_rvm_mobilenetv3_256x256_int8.yaml  rk3588s_rvm_mobilenetv3_288x512_int8.yaml  rk3588s_rvm_mobilenetv3_fp16.yaml  rk3588s_rvm_mobilenetv3_fp16_288x512.yaml  rk3588s_streaming-zipformer-bilingual-zh-en-2023-02-20.yaml  rv1126b_sherpa.yaml  rv1126b_streaming-zipformer-bilingual-zh-en-2023-02-20.yaml
configs/common/: .gitignore  rk-toolchain.template.yaml
configs/modnet/: rk3588s_modnet_original_fp16_576x1024.yaml  rk3588s_modnet_pureBN_int8_576x1024.yaml
configs/rvm/: rk3588s_rvm_mobilenetv3_256x256_fp16.yaml  rk3588s_rvm_mobilenetv3_fp16_1080x1920_0.125-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_1080x1920_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_1080x1920_0.5-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_256x256.yaml  rk3588s_rvm_mobilenetv3_fp16_256x256_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_288x512.yaml  rk3588s_rvm_mobilenetv3_fp16_288x512_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_320x576_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_320x576_0.5-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_416x736_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_416x736_0.5-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_544x960.yaml  rk3588s_rvm_mobilenetv3_fp16_544x960_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_544x960_0.5-dsr-no-resize-oplv3-merge.yaml  rk3588s_rvm_mobilenetv3_fp16_544x960_0.5-dsr-no-resize.yaml  rk3588s_rvm_mobilenetv3_fp16_544x960_0.5-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_736x1280_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_fp16_736x1280_0.5-dsr.yaml  rk3588s_rvm_mobilenetv3_int8_1080x1920.yaml  rk3588s_rvm_mobilenetv3_int8_1080x1920_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_int8_256x256.yaml  rk3588s_rvm_mobilenetv3_int8_256x256_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_int8_288x512.yaml  rk3588s_rvm_mobilenetv3_int8_288x512_0.25-dsr.yaml  rk3588s_rvm_mobilenetv3_no_refiner_fp16_288x512_0.25-dsr.yaml  rvm_mobilenetv3_fp16_1080x1920_0.125-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_1080x1920_0.25-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_1080x1920_0.5-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_1080x1920_0.75-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_1080x1920_1.0-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_256x256_0.25-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_288x512_0.25-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_320x576_0.25-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_320x576_0.5-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_416x736_0.25-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_416x736_0.5-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_544x960_0.25-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_544x960_0.5-dsr_rk3588s_20260603.yaml  rvm_mobilenetv3_fp16_736x1280_0.25-dsr_rk3588s_20260603.yaml  (+6 more)
configs/yolo/: rv1126b_yolov5n_head_fp16_640x640_20260707.yaml  rv1126b_yolov5n_head_int8_640x640_20260707.yaml  rv1126b_yolov5n_head_int8_640x640_auto-hybrid_20260709.yaml
core/: downloader.py  engine.py  main.py  preprocessor.py  rknn_adapter.py  utils.py
core/dsp/: audio_features.py  sherpa_features_extractor.py
core/pipeline/: __init__.py  engine.py
core/quantization/: analyzer.py  calibrator.py  configurator.py
core/utils/: __init__.py  downloader.py  file_utils.py  input_signature.py  log_utils.py  utils.py
core/verification/: comparator.py
core/workflow/: converter.py  preprocessor.py  recoverer.py
dataset/: calibration_candidates.txt
docs/: README_ZH_CN.md
envs/: requirements-cp38.txt  requirements.txt
models/: download.sh
script/: 11_echo_all_nodes.py  15_verify_numerics.py
script/01-inspect/: 01_inspect_rknn.py  02_accuracy_analysis.py
scripts/: run_all_rvm.sh  verify_no_resize.py
tools/: load_toolchain_overrides.py
(+57 files in other folders)
