[project]
name = "arcfoundry"
version = "0.1.0"
description = "Standardized RKNN Conversion SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PotterWhite", email = "themanuknowwhom@outlook.com"}
]

# [Strategy]
# Dependencies are managed via 'envs/requirements.txt' for the runtime environment.
# This file serves as project metadata and tool configuration.

[tool.ruff]
line-length = 88

[tool.yapf]
based_on_style = "pep8"
column_limit = 100
indent_width = 4
split_before_logical_operator = true
coalesce_brackets = true
