# Copyright (c) 2026 PotterWhite
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[project]
name = "arcfoundry"
version = "0.6.0"
description = "Standardized RKNN Conversion SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PotterWhite", email = "themanuknowwhom@outlook.com"}
]

# [Strategy]
# Dependencies are managed via 'envs/requirements.txt' for the runtime environment.
# This file serves as project metadata and tool configuration.

[tool.ruff]
line-length = 88

[tool.yapf]
based_on_style = "pep8"
column_limit = 100
indent_width = 4
split_before_logical_operator = true
coalesce_brackets = true

# 增加“拆行”的惩罚值，让 YAPF 极其不愿意拆行
split_penalty_for_added_line_split = 10000

# 强制在逗号分隔的参数列表中，尽量保持在同一行
split_before_first_argument = false
split_arguments_when_comma_terminated = false

# 禁止在字典的值前面拆行（针对你的 {}）
allow_split_before_dict_value = false
